--- a/themes/antares-2/source/css/style.css
+++ b/themes/antares-2/source/css/style.css
@@ -434,6 +434,15 @@ em {
     border: 0;
 }
 
+.post.post--featured::before,
+.cover::after {
+	content: '';
+	background-image: radial-gradient(ellipse at center, #0000001a, #000);
+	grid-column: 1/3;
+	grid-row: 1/3;
+	z-index: 1;
+}
+
 .cover-display {
     height: 100%;
     width: 100%;
@@ -443,7 +452,7 @@ em {
     background-position: center;
     object-fit: cover;
     object-position: center;
-    filter: saturate(0) brightness(0.3);
+    /* filter: saturate(0) brightness(0.3); */
     transition: filter 1s, transform 1s;
     pointer-events: none;
     user-select: none;
@@ -474,7 +483,6 @@ em {
 }
 
 .post__wrapper:hover + .cover-display {
-    filter: saturate(1) brightness(0.73);
     transform: scale(1.05);
     transition: filter 1s, transform 1s;
 }
