--- a/themes/antares-2/layout/tag.ejs
+++ b/themes/antares-2/layout/tag.ejs
@@ -1,2 +1,4 @@
-<h1 class="archive-title">Posts with <span class="hashtag">#<%- page.tag %></span></h1>
-<%- partial('_partial/archive', {pagination: config.tag, index: true}) %>
+<div class="tags-archive">
+    <h1 class="archive-title">Posts with <span class="hashtag">#<%- page.tag %></span></h1>
+    <%- partial('_partial/archive', {pagination: config.tag, index: true}) %>
+</div>
