Fixed Open Graph for sharing links with images

--- a/themes/antares-2/layout/_partial/head.ejs
+++ b/themes/antares-2/layout/_partial/head.ejs
@@ -64,7 +64,7 @@ function renderLinkPaths(pathArray = []) {
   <meta property="og:title" content="<%= page.title || config.title %>" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://celestialcinnamon.github.io<%- url %>" />
-  <meta property="og:image" content="http://celestialcinnmaon.github.io/<%- postCoverPath %>" />
+  <meta property="og:image" content="http://celestialcinnamon.github.io/<%- postCoverPath %>" />
   <meta property="og:description" content="<%- strip_html(description) %>" /> 
 
   <%- css('css/literata-book.css') %>
