--- a/themes/antares-2/source/css/style.css
+++ b/themes/antares-2/source/css/style.css
@@ -436,16 +436,16 @@ em {
 
 .post.post--featured::before,
 .cover::after {
-	content: '';
-	background-image: radial-gradient(ellipse at center, #eee0, #eee);
-	grid-column: 1/3;
-	grid-row: 1/3;
-	z-index: 1;
+    content: "";
+    background-image: radial-gradient(ellipse at center, #eee0, #eee);
+    grid-column: 1/3;
+    grid-row: 1/3;
+    z-index: 1;
 }
 
 .dark .post.post--featured::before,
 .dark .cover::after {
-	background-image: radial-gradient(ellipse at center, #21212100, #212121);
+    background-image: radial-gradient(ellipse at center, #21212100, #212121);
 }
 
 .cover-display {
@@ -469,8 +469,8 @@ em {
 }
 
 .post-card--featured:nth-of-type(odd) .label {
-	left: 1rem;
-	right: unset;
+    left: 1rem;
+    right: unset;
 }
 
 .post__wrapper {
@@ -557,7 +557,7 @@ em {
     padding: 2rem;
 }
 
-.post-card--featured:first-of-type    {
+.post-card--featured:first-of-type {
     border-top: 1px solid var(--bg-d2);
 }
 
@@ -969,21 +969,20 @@ em {
     font-family: var(--serif);
 }
 
-.article-tag-list-item,
-.tag {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    border-radius: 50px;
-    background-color: var(--accent-lighter);
-    transition: border-radius 300ms, box-shadow 300ms;
-    --focus-color: var(--accent-darker);
-    color: var(--text-on-primary);
-    margin: 5px;
-    text-indent: 0;
+.article-tag-list-item, .tag:not(.token) {
+	display: inline-block;
+	padding: 0.5rem 1rem;
+	border-radius: 50px;
+	background-color: var(--accent-lighter);
+	transition: border-radius 300ms, box-shadow 300ms;
+	--focus-color: var(--accent-darker);
+	color: var(--text-on-primary);
+	margin: 5px;
+	text-indent: 0;
 }
 
 .article-tag-list-item:hover,
-.tag:hover,
+.tag:not(.token):hover,
 .tag-list-link:hover {
     background-color: var(--focus-color);
     color: var(--text-on-primary);
@@ -1564,7 +1563,7 @@ code {
     background-color: var(--bg-d2);
     padding: 0.5rem;
     font-family: var(--sans-serif);
-    border-radius: 3px 3px 0 0 ;
+    border-radius: 3px 3px 0 0;
     display: block;
     margin: -1rem;
     margin-bottom: 1rem;
@@ -2162,8 +2161,8 @@ pre samp kbd {
 }
 
 dl {
-   margin: 1rem auto;
-   clear: both;
+    margin: 1rem auto;
+    clear: both;
 }
 
 dd {
@@ -2172,7 +2171,7 @@ dd {
 }
 
 dt::before {
-    content: '';
+    content: "";
     display: inline-block;
     width: 0.5rem;
     height: 0.5rem;
