Added two new articles

--- a/themes/antares-2/layout/_partial/head.ejs
+++ b/themes/antares-2/layout/_partial/head.ejs
@@ -50,7 +50,7 @@ function renderLinkPaths(pathArray = []) {
   <meta name="twitter:card" content="<%- strip_html(description) %>">
 
   <%
-    var postCoverPath = config.root + 'images/Website Cover v3.png';
+    var postCoverPath = config.root + 'images/favicon-194x194.png';
     var url = page.path? config.root + page.path : config.root;
 
     if(is_post()) {
