--- a/themes/antares-3/layout/_partial/article-featured.ejs
+++ b/themes/antares-3/layout/_partial/article-featured.ejs
@@ -1,13 +1,12 @@
 <article class="post post--featured">
-    <div class="post__wrapper">
-        <header class="post__header">
+    <header class="post__header">
+        <h2>
             <small class="label">Featured</small>
-            <h2><a class="post__title" href="<%- config.root %><%- item.path %>"><%- item.title %></a></h2>
-        </header>
-        <section class="post__meta">
-            <address rel="author" class="author-name"><%= item.author.name %></address>
-            <time pubdate datetime="<%= new Date(item.date).toJSON() %>" class="article-date"><%= item.date.format(config.date_format) %></time>
-        </section>
-    </div>
-    <div style="background-image: url(<%- config.root + item.lang + '/' + item.slug + '/' + item.cover_image %>);" class="cover-display"></div>
+            <a href="<%- config.root %><%- item.path %>" class="post__title"><%- item.title %></a>
+        </h2>
+    </header>
+    <p class="post__meta">
+        <address class="author-name" rel="author"><%= item.author.name %></address>
+        <time class="article-date" datetime="<%= new Date(item.date).toJSON() %>" pubdate><%= item.date.format(config.date_format) %></time>
+    </p>
 </article>
