--- a/themes/antares-3/layout/index.ejs
+++ b/themes/antares-3/layout/index.ejs
@@ -1,4 +1,5 @@
 <main>
+    <h1 class="sr-only">Antares Programming</h1>
     <% 
         const featuredArticles = [];
         page.posts.each(function(item) {
