--- a/themes/antares-3/layout/_partial/footer.ejs
+++ b/themes/antares-3/layout/_partial/footer.ejs
@@ -1,63 +1,10 @@
-<footer class="footer noscript" role="contentinfo">
-  <section>
-    <h4 class="sidebar__title">See me outside</h4>
-    <ul>
-      <li>
-        <a href="https://facebook.com/antaresprogramming" target="_blank"
-          >Antares on Facebook</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://github.com/celestialcinnamon/antares-blog"
-          target="_blank"
-          >Antares on Github</a
-        >
-      </li>
-    </ul>
-
-    <ul>
-      <li>
-        <a href="https://facebook.com/dorkas.rubio" target="_blank"
-          >See me on Facebook</a
-        >
-      </li>
-      <li>
-        <a href="#!" onclick="alert('I told you to not do that')"
-          >See me on Twitter</a
-        >
-        (please don't)
-      </li>
-      <li>
-        <a href="https://instagram.com/melancholicapoptosis" target="_blank"
-          >See me on Instagram</a
-        >
-      </li>
-      <li>
-        <a href="https://celestialcinnamon.github.io" target="_blank"
-          >See my portfolio</a
-        >
-      </li>
-      <li>
-        <a href="mailto:https:francoisoibur21@gmail.com" target="_blank"
-          >Send me an email:</a
-        >
-        francoisoibur21@gmail.com
-      </li>
-    </ul>
-  </section>
-
-  <section class="about">
-    <h3>Ang Antares Programming</h3>
-    <p>Ang Antares Programming ay isang blog para sa mga Pilipino tungkol sa mga bagay tungkol sa Web at software development na hindi madalas maituro sa mga university at college. Dahil kinikilala ng Antares Programming ang epekto ng wikang kinalakhan o <i lang="en">mother tongue</i> sa pagkatuto, karamihan ng mga artikulo sa site na ito ay nasa Filipino. Umaasa ang writer nito na darating ang panahon na magkakaroon ng mas maraming materyal sa iba pang mga wika ng Filipinas. Pero sa ngayon, sapat na ang pagsisikap na ito.</p>
-    <p>Nga pala, hindi laging ganito "kalalim" (kapormal) ang Filipino sa site na ito. 😉</p>
-  </section>
-
-  <p>&copy; <%- new Date().getFullYear() %> Francis Rubio</p>
+<footer class="footer" role="contentinfo">
+  <p>&copy; 2019 Housse of Antares</p>
+  <p>Reserbado ang lahat ng karapatan.</p>
+  <a href="#!">Tungkol sa Antares Programming</a>
+  <a href="https://www.facebook.com/antaresprogramming"><i>Antares Programming</i> sa Facebook</a>
   <p id="back-to-top"><a href="#top">Back to top</a></p>
 </footer>
-
-<!-- <%- js('js/index.js') %> -->
 <script>
     var CONFIG_ROOT = `<%- config.root %>`;
     var CONFIG_URL = `<%- config.url %>`.replace('/antares-blog', '');
