--- a/themes/antares-3/layout/_widget/category.ejs
+++ b/themes/antares-3/layout/_widget/category.ejs
@@ -1,5 +1,5 @@
 <% if (site.categories.length){ %>
-  <div class="widget-wrap">
+  <section class="widget-wrap">
     <h3 class="widget-title"><%= __('categories') %></h3>
     <div class="widget">
       <%- list_categories({show_count: theme.show_count}) %>
