--- a/themes/antares-3/source/css/style.css
+++ b/themes/antares-3/source/css/style.css
@@ -6,6 +6,107 @@
     font-display: swap;
 }
 
-.h {
-    display: none;
+html {
+    font-size: 16px;
+    background-color: #10130F;
+    color: #aaa;
+
+    --primary-color: #fd0;
+    --accent-blue: #4080FF;
+    --accent-black: #000;
+    --text-color: #aaa;
+    --heading-color: #fff;
+
+    --link-color: var(--primary-color);
+
+    --serif: "Libre Baskerville", serif;
+    --sans-serif: "Montserrat", sans-serif;
+    --monospace: "Source Sans Pro", monospace;
+}
+
+a {
+    color: var(--link-color);
+    text-decoration: none;
+    border-bottom: 1px dashed var(--link-color);
+}
+
+img {
+    max-width: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: minmax(0, 1fr) 1fr 2fr;
+    grid-template-rows: auto min-content 1fr;
+}
+
+.header[role="banner"] {
+    grid-row: 1/2;
+    grid-column: 1/3;
+}
+
+.site-logo {
+    border: none;
+    align-self: center;
+    justify-self: start;
+}
+
+.site-logo img {
+    min-width: 50px;
+    max-width: 100px;
+}
+
+.navbar {
+    align-self: center;
+    justify-self: end;
+}
+
+.nav-list {
+    display: flex;
+    list-style: none;
+}
+
+.nav {
+    display: block;
+    border: none;
+    font-family: var(--sans-serif);
+    text-transform: uppercase;
+    padding: 0 1rem;
+    color: var(--heading-color);
+    font-weight: 900;
+}
+
+.navbar,
+.header[role="banner"] {
+    position: sticky;
+    top: 0;
+}
+
+main {
+    grid-column: 2/4;
+    grid-row: 2/4;
+}
+
+.post {
+    font-family: var(--serif);
+}
+
+.post__title {
+    font-size: 2rem;
+}
+
+.post--featured .post__title {
+    font-size: 3rem;
+}
+
+.sidebar {
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+.footer {
+    grid-row: 4/5;
+    grid-column: 1/4;
 }
