Added author information

--- a/themes/antares-3/layout/_partial/sidebar.ejs
+++ b/themes/antares-3/layout/_partial/sidebar.ejs
@@ -1,4 +1,8 @@
 <aside class="sidebar">
+  <section class="author-sidebar">
+    <img src="images/francis_rubio.jpg" alt="Photo of Francis Rubio">
+    <p>by <address class="author-name">Francis Rubio</address></p>
+  </section>
   <% theme.widgets.forEach(function(widget){ %>
     <%- partial('_widget/' + widget) %>
   <% }) %>
