--- a/themes/antares-3/layout/_partial/sidebar.ejs
+++ b/themes/antares-3/layout/_partial/sidebar.ejs
@@ -1,7 +1,8 @@
 <aside class="sidebar">
   <section class="author-sidebar">
-    <img src="images/francis_rubio.jpg" alt="Photo of Francis Rubio">
-    <p>by <address class="author-name">Francis Rubio</address></p>
+    <img src="images/francis_rubio.jpg" alt="Photo of Francis Rubio" class="author-photo">
+    <address>by <span class="author-name">Francis Rubio</span></address>
+    <p>Freelance Web developer and designer from The Philippines</p>
   </section>
   <% theme.widgets.forEach(function(widget){ %>
     <%- partial('_widget/' + widget) %>
