--- a/themes/antares-3/source/css/style.css
+++ b/themes/antares-3/source/css/style.css
@@ -14,7 +14,8 @@ html {
     --primary-color: #fd0;
     --accent-blue: #4080FF;
     --accent-black: #000;
-    --text-color: #aaa;
+    --spare-color: #777;
+    --text-color: #ddd;
     --heading-color: #fff;
 
     --link-color: var(--primary-color);
@@ -99,6 +100,10 @@ main {
 
 .post__title {
     font-size: 2rem;
+    color: var(--heading-color);
+    border: none;
+    font-weight: 300;
+    display: block;
 }
 
 .post--featured .post__title {
@@ -114,6 +119,7 @@ main {
     padding: 1rem;
     font-family: var(--serif);
     text-align: right;
+    color: var(--spare-color);
 }
 
 .author-photo {
@@ -123,4 +129,90 @@ main {
 
 .author-name {
     font-style: italic;
+    color: var(--text-color);
+}
+
+/* POSTS */
+.post {
+    color: var(--text-color);
+    display: grid;
+    grid-template-columns: 15% 1fr 1fr 2fr;
+    grid-template-rows: min-content min-content 1fr min-content;
+    grid-template-areas: 
+        "title title title title"
+        "meta meta meta meta"
+        ". content content content"
+        "footer footer footer footer";
+    padding: 3rem 1rem;
+}
+
+.post__header {
+    grid-area: title;
+}
+
+.post__meta {
+    color: var(--spare-color);
+    grid-area: meta;
+    display: flex;
+}
+
+.post__meta address::after {
+    content: '';
+    display: inline-block;
+    height: 0.3rem;
+    width: 0.3rem;
+    border-radius: 100%;
+    background-color: var(--spare-color);
+    margin: 0 .5rem;
+    margin-bottom: .3rem;
+}
+
+.post__excerpt,
+.post--featured > p {
+    grid-area: content;
+}
+
+.post > footer {
+    grid-area: footer;
+    display: flex;
+    margin-top: 1rem;
+}
+
+.post__tags {
+    list-style: none;
+    display: inline;
+    padding: 0;
+    margin: 0;
+    margin-right: auto;
+}
+
+.post__tags li {
+    display: inline;
+}
+
+.article-tag {
+    font-family: var(--sans-serif);
+    color: var(--heading-color);
+    border: none;
+    padding: 0.5rem 1rem;
+    line-height: 2.2rem;
+    background-color: var(--accent-black);
+    border-radius: 100px;
+}
+
+.article-tag::first-letter {
+    color: var(--primary-color);
+}
+
+.post-category,
+.label {
+    font-family: var(--sans-serif);
+    font-weight: normal;
+    text-transform: uppercase;
+    border: none;
+}
+
+
+.label {
+    font-size: .8rem;
 }
