Reset CSS to accomodate the new design

--- a/themes/antares-3/layout/_partial/header.ejs
+++ b/themes/antares-3/layout/_partial/header.ejs
@@ -1,10 +1,12 @@
-<header class="header" role="banner">
-  <a href="<%- config.root %>" class="site-logo">
-    <img src="<%- config.root %>images/mstile-310x310.png" alt="">
-</header>
-<nav class="navbar">
-  <ul class="nav-list">
-    <li class="nav-item nav-active"><a class="nav" href="<%- config.root + theme.menu.Home %>">Home</a></li>
-    <li class="nav-item"><a class="nav" href="<%- config.root + theme.menu.Archives %>">Archives</a></li>
-  </ul>
-</nav>
+<div class="banner">
+  <header class="header" role="banner">
+    <a href="<%- config.root %>" class="site-logo">
+      <img src="<%- config.root %>images/mstile-310x310.png" alt="">
+  </header>
+  <nav class="navbar">
+    <ul class="nav-list">
+      <li class="nav-item nav-active"><a class="nav" href="<%- config.root + theme.menu.Home %>">Home</a></li>
+      <li class="nav-item"><a class="nav" href="<%- config.root + theme.menu.Archives %>">Archives</a></li>
+    </ul>
+  </nav>
+</div>
