--- a/themes/antares-3/layout/_partial/article.ejs
+++ b/themes/antares-3/layout/_partial/article.ejs
@@ -1,8 +1,8 @@
 <% const item = post %>
-<article>
+<article class="post--article">
   <header>
     <h1>
-      <a href="<%- config.root + post.path %>" class="post__title"><%- item.title %></a>
+      <a class="post--title" href="<%- config.root + post.path %>" class="post__title"><%- item.title %></a>
     </h1>
   </header>
   <%- post.content %>
