--- a/themes/antares-3/source/css/style.css
+++ b/themes/antares-3/source/css/style.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-display: swap;
+    transition: all 300ms;
+}
+
+*:-moz-focusring {
+    outline: none;
+}
+
+:focus {
+    outline: none;
 }
 
 html {
@@ -31,6 +40,79 @@ a {
     border-bottom: 1px dashed var(--link-color);
 }
 
+/*
+	Improved screen reader only CSS class
+	@author Gaël Poupard
+		@note Based on Yahoo!'s technique
+		@author Thierry Koblentz
+		@see https://developer.yahoo.com/blogs/ydn/clip-hidden-content-better-accessibility-53456.html
+	* 1.
+		@note `clip` is deprecated but works everywhere
+		@see https://developer.mozilla.org/en-US/docs/Web/CSS/clip
+	* 2.
+		@note `clip-path` is the future-proof version, but not very well supported yet
+		@see https://developer.mozilla.org/en-US/docs/Web/CSS/clip-path
+		@see http://caniuse.com/#search=clip-path
+		@author Yvain Liechti
+		@see https://twitter.com/ryuran78/status/778943389819604992
+	* 3.
+		@note preventing text to be condensed
+		author J. Renée Beach
+		@see https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+		@note Drupal 8 goes with word-wrap: normal instead
+		@see https://www.drupal.org/node/2045151
+		@see http://cgit.drupalcode.org/drupal/commit/?id=5b847ea
+	* 4.
+		@note !important is important
+		@note Obviously you wanna hide something
+		@author Harry Roberts
+		@see https://csswizardry.com/2016/05/the-importance-of-important/
+*/
+
+.sr-only {
+	border: 0 !important;
+	clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+	-webkit-clip-path: inset(50%) !important;
+		clip-path: inset(50%) !important;  /* 2 */
+	height: 1px !important;
+	margin: -1px !important;
+	overflow: hidden !important;
+	padding: 0 !important;
+	position: absolute !important;
+	width: 1px !important;
+	white-space: nowrap !important;            /* 3 */
+}
+
+/*
+	Use in conjunction with .sr-only to only display content when it's focused.
+	@note Useful for skip links 
+	@see http://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
+	@note Based on a HTML5 Boilerplate technique, included in Bootstrap
+	@note Fixed a bug with position: static on iOS 10.0.2 + VoiceOver
+		@author Sylvain Pigeard
+		@see https://github.com/twbs/bootstrap/issues/20732
+*/
+.sr-only-focusable:focus,
+.sr-only-focusable:active {
+	clip: auto !important;
+	-webkit-clip-path: none !important;
+		clip-path: none !important;
+	height: auto !important;
+	margin: auto !important;
+	overflow: visible !important;
+	width: auto !important;
+	white-space: normal !important;
+}
+
+a:not([class]):hover {
+    opacity: 0.75;
+    border-bottom-style: solid;
+}
+
+a:focus {
+    box-shadow: 0 0 0 5px var(--accent-blue);
+}
+
 img {
     max-width: 100%;
 }
@@ -42,177 +124,4 @@ address {
 body {
     margin: 0;
     padding: 0;
-    display: grid;
-    grid-template-columns: minmax(0, 1fr) 1fr 2fr;
-    grid-gap: 1rem;
-}
-
-.header[role="banner"] {
-    grid-row: 1/2;
-    grid-column: 1/3;
-}
-
-.site-logo {
-    border: none;
-    align-self: center;
-    justify-self: start;
-}
-
-.site-logo img {
-    min-width: 50px;
-    max-width: 100px;
-}
-
-.navbar {
-    align-self: center;
-    justify-self: end;
-}
-
-.nav-list {
-    display: flex;
-    list-style: none;
-}
-
-.nav {
-    display: block;
-    border: none;
-    font-family: var(--sans-serif);
-    text-transform: uppercase;
-    padding: 0 1rem;
-    color: var(--heading-color);
-    font-weight: 900;
-}
-
-.navbar,
-.header[role="banner"] {
-    position: sticky;
-    top: 0;
-}
-
-main {
-    grid-column: 2/4;
-    grid-row: 2/4;
-}
-
-.post {
-    font-family: var(--serif);
-}
-
-.post__title {
-    font-size: 2rem;
-    color: var(--heading-color);
-    border: none;
-    font-weight: 300;
-    display: block;
-}
-
-.post--featured .post__title {
-    font-size: 3rem;
-}
-
-.footer {
-    grid-row: 4/5;
-    grid-column: 1/4;
-}
-
-.author-sidebar {
-    padding: 1rem;
-    font-family: var(--serif);
-    text-align: right;
-    color: var(--spare-color);
-}
-
-.author-photo {
-    width: 100px;
-    text-align: right;
-}
-
-.author-name {
-    font-style: italic;
-    color: var(--text-color);
-}
-
-/* POSTS */
-.post {
-    color: var(--text-color);
-    display: grid;
-    grid-template-columns: 15% 1fr 1fr 2fr;
-    grid-template-rows: min-content min-content 1fr min-content;
-    grid-template-areas: 
-        "title title title title"
-        "meta meta meta meta"
-        ". content content content"
-        "footer footer footer footer";
-    padding: 3rem 1rem;
-}
-
-.post__header {
-    grid-area: title;
-}
-
-.post__meta {
-    color: var(--spare-color);
-    grid-area: meta;
-    display: flex;
-}
-
-.post__meta address::after {
-    content: '';
-    display: inline-block;
-    height: 0.3rem;
-    width: 0.3rem;
-    border-radius: 100%;
-    background-color: var(--spare-color);
-    margin: 0 .5rem;
-    margin-bottom: .3rem;
-}
-
-.post__excerpt,
-.post--featured > p {
-    grid-area: content;
-}
-
-.post > footer {
-    grid-area: footer;
-    display: flex;
-    margin-top: 1rem;
-}
-
-.post__tags {
-    list-style: none;
-    display: inline;
-    padding: 0;
-    margin: 0;
-    margin-right: auto;
-}
-
-.post__tags li {
-    display: inline;
-}
-
-.article-tag {
-    font-family: var(--sans-serif);
-    color: var(--heading-color);
-    border: none;
-    padding: 0.5rem 1rem;
-    line-height: 2.2rem;
-    background-color: var(--accent-black);
-    border-radius: 100px;
-}
-
-.article-tag::first-letter {
-    color: var(--primary-color);
-}
-
-.post-category,
-.label {
-    font-family: var(--sans-serif);
-    font-weight: normal;
-    text-transform: uppercase;
-    border: none;
-}
-
-
-.label {
-    font-size: .8rem;
 }
