--- a/themes/antares-3/layout/_partial/head.ejs
+++ b/themes/antares-3/layout/_partial/head.ejs
@@ -89,13 +89,13 @@ function renderLinkPaths(pathArray = []) {
   <%- scripts.join("\n") %>
 
   <!-- TODO: Uncomment these links -->
-  <!--link
-    href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900"
+  <!link
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap"
     rel="stylesheet"
   />
-  
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"-->
+  <link href="https://fonts.googleapis.com/css?family=Vidaloka&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
