--- a/themes/antares-3/layout/_partial/header.ejs
+++ b/themes/antares-3/layout/_partial/header.ejs
@@ -1,12 +1,13 @@
 <div class="banner">
   <header class="header" role="banner">
-    <a href="<%- config.root %>" class="site-logo">
-      <img src="<%- config.root %>images/mstile-310x310.png" alt="">
+    <a href="<%- config.root %>" class="site-logo" aria-label="Go to home">
+      <img src="<%- config.root %>images/logo_v4.png" alt="Antares Programming logo">
+    </a>
   </header>
   <nav class="navbar">
     <ul class="nav-list">
-      <li class="nav-item nav-active"><a class="nav" href="<%- config.root + theme.menu.Home %>">Home</a></li>
       <li class="nav-item"><a class="nav" href="<%- config.root + theme.menu.Archives %>">Archives</a></li>
+      <li class="nav-item"><a class="nav" href="#!">Downloads</a></li>
     </ul>
   </nav>
 </div>
