Added a skip link Just add an id o  to any content you want the skip link to point to.

--- a/themes/antares-3/layout/_partial/header.ejs
+++ b/themes/antares-3/layout/_partial/header.ejs
@@ -1,4 +1,5 @@
 <div class="banner">
+  <a href="#main-content" class="nav skiplink sr-only sr-only-focusable">Skip to content</a>
   <header class="header" role="banner">
     <a href="<%- config.root %>" class="site-logo" aria-label="Go to home">
       <img src="<%- config.root %>images/logo_v4.png" alt="Antares Programming logo">
