--- a/themes/antares-3/layout/index.ejs
+++ b/themes/antares-3/layout/index.ejs
@@ -1,6 +1,6 @@
 <h1 class="sr-only">Antares Programming</h1>
 <div class="posts-wrapper">
-    <main>
+    <main id="main-content">
         <% 
             page.posts.each(function(item){ 
         %>
